# operational-planning-genetic

./: README.md  pyproject.toml
app/: constants.py
app/satellites/: satellite.py
