[tool.poetry]
name = "operational-planning-genetic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app"
]
env_override_existing_values = 1
env_files = [
    ".env.test"
]